# Exam-Preparation-AI-Agent

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INTRO.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
backend/: pyproject.toml
backend/app/: main.py
backend/chatkit_backend.egg-info/: PKG-INFO  requires.txt
backend/study_assistant_ai_boilerplate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
e2e/: api.spec.ts  chat-agents.spec.ts  chatkit-ui.spec.ts  demo-walkthrough.spec.ts  documents.spec.ts  helpers.ts  mcp-notes.spec.ts  setup.spec.ts  theme.spec.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
resources/: AGENTS_PRESENTATION.md  BOILERPLATE_IMPLEMENTATION_SPEC.md  BOILERPLATE_LLM_PROMPT.md  DEMO_PLAYBOOK.md  create_new_boilerplate_repo.sh
resources/code_examples/: 1_basic_chat.py  2_multiturn_conversation.py  3_tools.py  4_structured_output.py  5_realworld_agent.py  6_travel_agent.py  7_complete_study_system.py  8_mcp.py  _logfire_setup.py
setup/: SETUP_GUIDE.md  setup_check.bat  setup_check.py  setup_check.sh
workshop/: bootstrap_workspace.sh  create_scaffold_branch.sh  healthcheck.ps1  healthcheck.sh  init_env.ps1  init_env.sh  preflight.ps1  preflight.sh  start.mjs  workshop.sh
workshop/exercises/: 1.txt  2.txt  4.txt  5.txt  6.txt  7a.txt  7b.txt  prompt.txt
(+29 files in other folders)
